# ctask

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
include/: BaseCurve.h  Circle.h  Ellipsis.h  Helix.h  base.h  curves.h
src/: Ellipsis.cpp  Helix.cpp  main.cpp
test/: CMakeLists.txt  simple_circle_test.cpp  simple_ellipsis_test.cpp  simple_helix_test.cpp
